# CastorAnalytics

./: .gitignore  README.md  requirements.txt
castoranalytics/: CHANGELOG  LICENSE  README.rst  pyproject.toml
castoranalytics/experiments/pagerouting/: main.py
castoranalytics/experiments/pyinstaller/: build.sh  main.py  package.sh
castoranalytics/experiments/spinner/: main.py
castoranalytics/scripts/: deploy2pypi.bat
castoranalytics/src/: app.py
castoranalytics/src/castoranalytics/: __main__.py  app.py
castoranalytics/src/castoranalytics/core/: __init__.py  api.py  cache.py  castorapiclient.py  core.py  credentials.py  logging.py
castoranalytics/src/castoranalytics/core/api/: castorapiclient.py  country.py  countrycodes.py  study.py  studydetails.py  studysite.py
castoranalytics/src/castoranalytics/core/command/: base.py  commandbus.py  commandregistry.py
castoranalytics/src/castoranalytics/core/data/: country.py  countrycollection.py  fieldcollection.py  study.py  studycollection.py  studysite.py  (+2 more)
castoranalytics/src/castoranalytics/models/: fieldmodel.py  optiongroupmodel.py  optionmodel.py  recorditemmodel.py  recordmodel.py  studymodel.py  studysitemodel.py
castoranalytics/src/castoranalytics/ui/: bootstrap.py  constants.py  crumbs.py  mainwindow.py  router.py  settings.py  uibuilder.py  utils.py
castoranalytics/src/castoranalytics/ui_new/: constants.py  mainwindow.py
castoranalytics/src/castoranalytics/ui_old/: constants.py  mainwindow.py
castoranalytics/tests/: castoranalytics.py  sources.py  test_app.py  test_commands.py  test_core.py
(+103 files in other folders)
